...
                name="display_name"
                render={({ field: { onChange, onBlur, value } }) => (
                  <TextInput
                    value={value}
                    onChangeText={onChange}
                    onBlur={onBlur}
                    placeholder="Jan de Vries"
                    textContentType="name"
                    autoCapitalize="words"
                  />
                )}
              />
            </FormField>
...
